Fri Nov  4 22:0:29 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * tao/Exclusive_TMS.cpp:
        * tao/Messaging/Asynch_Invocation.cpp:
        * tao/Messaging/Asynch_Reply_Dispatcher.cpp:

          Fixed to allow use of Exclusive TMS with AMI requests.

Wed Nov  9 13:34:13 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * utils/logWalker/Log.cpp:

          Fix compile-time warning.

Wed Nov  9 10:25:09 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        * tests/Bug_3768_Regression/TestCallback.cpp:
        * tests/Bug_3768_Regression/server.cpp:

          Cleaned up test to behave more properly to fix segfaults
          and other failures.

Tue Nov  8 19:11:46 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/ImplRepo_Service/ImR_Activator.idl:
        * orbsvcs/ImplRepo_Service/ImR_Locator.idl:
        * orbsvcs/ImplRepo_Service/ImR_Locator_i.h:
        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:
        * orbsvcs/ImplRepo_Service/Locator_Options.h:
        * orbsvcs/ImplRepo_Service/Locator_Repository.h:
        * orbsvcs/ImplRepo_Service/Locator_Repository.cpp:
        * orbsvcs/ImplRepo_Service/Server_Info.cpp:
        * orbsvcs/ImplRepo_Service/tao_imr_i.cpp:
          Doxygen and unicode improvements

Mon Nov  7 22:07:18 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * utils/logWalker/HostProcess.h:
        * utils/logWalker/HostProcess.cpp:
        * utils/logWalker/Invocation.cpp:
        * utils/logWalker/Log.h:
        * utils/logWalker/Log.cpp:
        * utils/logWalker/PeerProcess.cpp:
        * utils/logWalker/Session.h:
        * utils/logWalker/Session.cpp:
        * utils/logWalker/logWalker.cpp:

          Added basic support for tracking SSLIOP connections. Fixed some
          memory leak issues reported by valgrind. Added a new date format
          selector to accommodate two different time/date formats used by
          -ORBVerboseLogging 1.
